SQuirreL SQL FX Change Log
==============================

Feature: Code completion, finishing a completion list with tab instead return will remove all succeeding chars up to the next whitespace.

Builds now include a doc/src.jar where the sources of the build are placed.

Upgraded RichTextFX to version 0.5.

Feature: Right mouse menu in SQL results: "Copy", "Copy with header" and "Copy as INSERT-VALUES statement"

Bug fix: SQL editors error highlighting was case sensitive.

Feature: Right mouse menu in SQL results: Copy as SQL-IN-Statement

Upgraded RichTextFX to version 0.4.4.
  Fixes problem where scrolling didn't work when Pos1/End-keys were used.

Bug fix: Once and again SQL results where not displayed

Bug fix: Alias properties --> Editing schema table didn't work.

Feature: SQL errors are now displayed as tool tips: If the mouse pointer is held over an error (word marked red) the tool tip is shown.

Feature: SQL history combo box and history search dialog.

Feature: SQL results can be edited when only one table was selected.

Bug fix: Cursor didn't blink inside the SQL editor although the editor was focused.

Bug fix: Run SQL didn't work on MS-Windows when the SQL editor contained mor than one statement

Bug fix: SQL Editor hung on MS-Windows a new line was entered.

Bug fix: Reasonable default for home directory: <user.home>/.squirrel-sql-fx

Feature: Integration of SQL parser
 - Highlighting of SQL syntax errors
 - Support of table alias names in code completion

Feature: Syntax highlighting based on
 - Tomas Mikula's Code Area component. See https://github.com/TomasMikula/RichTextFX
 - Fifesoft's RSyntaxTextArea for SQL token marking. See http://fifesoft.com/rsyntaxtextarea/

Feature: Open SQL editor tabs for existing Session

Feature: Menu bar including Session menu

Feature: Alias schema loading has a new check box which allows to hide empty schema or catalog nodes in the object tree.
